hero image on small screens issue fixeeeed

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,89 +1,56 @@
-/* #header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-} */
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/CV.jpg");
+  height: 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 
-.hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
-    padding: 40px;
-    /* box-sizing: border-box; */
-    color: white;
-    background-image: url("../img/CV.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+.hero-text {
+  text-align: center;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 
-    min-height: 100%;
+.hero-text h1 {
+  margin-bottom: 350px;
 
 }
 
-.hero-title {
-    max-width: 16em;
-    margin: 0;
-    padding-top: 120px;
-    margin-left: 50px;
-    font-size: 38px;
-    font-weight: bold;
-    line-height: 0.9;
+.hero-text button {
+  width: 60%;
+  padding: 0.5em 0.67em;
+  color: white;
+  background-color: #333;
+  text-decoration: none;
+  border: 0.1em solid white;
+  margin: 2px;
+  font-size: 24px;
 }
 
-.hero-footer {
-    display: flex;
-    margin-bottom: 1em;
-    padding-bottom: 30px;
-    margin-left: 50px;
-}
-
-.hero-button {
-    padding: 0.5em 0.67em;
-    color: white;
-    background-color: #333;
-    text-decoration: none;
-    border: 0.1em solid white;
-    margin: 2px;
-    font-size: 24px;
-}
-
-.hero-button:hover {
-    color: black;
-    background-color: white;
+.hero-text button:hover {
+  color: black;
+  background-color: white;
 }
 
 @media screen and (max-width: 768px) {
-    .hero-title {
-        font-size: 26px;
-    }
+  .hero-text {
+    top: 60%;
+    left: 40%;
+  }
 
-    .hero {
-        /* display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
-        margin:auto;
-        padding: 0px;
-        box-sizing: border-box;
-        color: white;
-        background-image: url("../img/CV.jpg");
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover; */
-        min-height: 100%;
-        position: relative;
-        overflow: hidden;
+  .hero-text h1 {
+    font-size: 22px;
+    margin-bottom: 200px;
+  }
 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-
-        background-attachment: fixed;
-    }
-
-    .hero-button {
-        font-size: 16px;
-    }
+  .hero-text button {
+    font-size: 16px;
+  }
 }
